# Langchain_basics

./: .gitignore  README.md  pyproject.toml  requirements.txt
RAG_project/: app.py  create_database.py  main.py
RAG_project/chromaM_db/bcabe092-7551-4f8d-8224-62416cc977c5/: index_metadata.pickle
RAG_project/doc_loaders/: page.py  pdff.py  test.py
RAG_project/docs/: notes.txt
RAG_project/retrievers/: arxiv1.py  mmr.py  multiQ.py
RAG_project/text_splitter/: length_bas.py  rec_split.py  semantic_bas.py  token_bas.py
RAG_project/vec_store/: DB.py
Tools/: agent.py  agent1.py  checkChiki.py  customTool.py  newsummarizer.py
chains/: conditional_chain.py  parallel_chain.py  sequential_chain.py  simple_chain.py
models/ChatModels/: geminimodel.py  muft.py  temp.txt
models/ChatModels/EmbeddedModels/: doc_sim.py  hf_local.py  hf_locals_docs.py
prompts/: chatPromptTemplate.py  chat_history.txt  chatbot.py  message_Placeholder.py  messages.py  prompt_gen.py  prompt_ui.py  template.json
runnables/: conditional.py  lambda.py  passthrough.py  sequence.py
structured_output/: json_schema.json  pydantic_demo.py  struct_out_json.py  struct_out_pydantic.py  type_dict.py
structured_output/output_parsers/: jsonOutputParsers.py  pydanticOutputParsers.py  strOutputParsers.py  strOutputParsers1.py
