[project]
name = "langchain_basics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv==1.4.8",
    "chromadb>=1.5.9",
    "google-generativeai>=0.8.6",
    "grandalf>=0.8",
    "huggingface-hub>=1.8.0",
    "ipykernel>=7.2.0",
    "langchain>=1.2.13",
    "langchain-anthropic>=1.4.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.23",
    "langchain-experimental>=0.4.1",
    "langchain-google-genai>=4.2.1",
    "langchain-huggingface>=1.2.1",
    "langchain-mistralai>=1.1.2",
    "langchain-openai>=1.1.12",
    "numpy>=2.4.3",
    "openai>=2.30.0",
    "pdfminer-six>=20260107",
    "pydantic>=2.12.5",
    "pypdf>=6.11.0",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "streamlit>=1.55.0",
    "tesseract>=0.1.3",
    "torch>=2.11.0",
    "transformers>=5.4.0",
    "unstructured[pdf]>=0.22.28",
    "xmltodict>=1.0.4",
]
